--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
+  "homepage": "https://username.github.io/Expense-Tracker/",
   "devDependencies": {
     "@eslint/js": "^9.5.0",
     "@types/react": "^18.3.3",
